# rag-qa

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh
docker/: .dockerignore  Dockerfile  docker-compose.yml
samples/: ML Engineer Tech Test chunks.json  chunked-ml-engineer-tech-test.json  markdown-file-02.json
src/: emb.py  embedding.py  llm.py  main.py  models.py  prompts.py  utils.py  vectorstore.py
tests/: __init__.py  test_main.py  test_vectorstore.py
